<?xml version="1.0"?>
<package format="2">
  <name>nhr_sim</name>
  <version>0.0.0</version>
  <description>The nhr_sim package</description>
  <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nhr_control</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>turtlebot3_description</build_depend>
  <build_export_depend>nhr_control</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>turtlebot3_description</build_export_depend>
  <exec_depend>nhr_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
</package>
